--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "type": "module",
   "workspaces": [
     "src/dbank_frontend"
-  ]
+  ],
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
+  }
 }
